BugFix: Add in management for overflowing text in bookcards

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+/* TODO Add Media queries */
+
 body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
+  max-width: 100%;
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -298,21 +301,31 @@ main .booksContainer {
 
 .bookDetails {
   max-height: 200px;
-
+  max-width: 95%;
   padding: 0;
   grid-row: 1;
   grid-column: 1;
-  word-break: break-word;
-  overflow: hidden;
 }
 
 .bookDetails p {
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-.bookdetails h3 {
-  padding: 0;
+.numPages {
+  font-style: italic;
+}
+
+.bookTitle {
+  max-width: 95%;
+  max-height: 80%;
+  padding-bottom: 2px;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: break-word;
+  overflow: hidden;
 }
 
 /* read Status button */
